1.8.6 (22.08.2017):

* Fixed visibility of options for DjVu, JPEG, & TIFF in save dialogue.
* + Reload recursion limit in Edit/Preferences
  Break of out reload recursion loop if maximum number of reloads is exceeded.


1.8.5 (18.08.2017):

* + support for Poppler (pdftops) as postscript backend.
* - support for libsane-perl
* Reapply current scan settings for those scanners that reset them when forcing
  a reload
* Eliminate unnecessary strings from gscan2pdf.pot to prevent unnecessary work
  and confusion on the part of the translators.
* + A3 to default paper sizes
* Update to Hungarian translation (thanks to csola)
* Update to Slovak translation (thanks to Dušan Kazik)


1.8.4 (28.07.2017):

* Cope with Tesseract 3.0.5 writing Page 1 instead of Page 0
  Thanks to Chris Mayo for the patch. Closes merge request #14
* Assume pixels/inch if the image doesn't know better. Closes bug #258
  (Tesseract 3.05.01: Warning. Invalid resolution 0 dpi. Using 70 instead)
* Fix paragraph formatting in save as text output.
  Thanks to Chris Mayo for the patch. Closes merge request #16
* In preparation for future removal of libsane-perl frontend, change default
  frontend libsane-perl -> libimage-sane-perl, and similarly switch selected
  frontend on upgrade from older version. Assuming no major problems occur,
  support for libsane-perl will be removed in the next release.
* Fixed bug writing postscript file.
* + support for ghostscript backend due to apparent bug in tiff2ps.
* Round scan options with ranges to valid values before applying.
* Fixed bug updating list of option-dependent values. Closes bug #264
  (Effective resolution is 75 DPI despite selecting 600 or 1200).


1.8.3 (01.07.2017):

* + libimage-sane-perl frontend
  - scanimage-perl and scanadf-perl frontends
  Closes bug #219 (Rescan for devices not working properly).
* Fixed bug writing multipage hOCR files.
* Fixed bug switching between Tesseract and Cuneiform (particularly for German).


1.8.2 (01.06.2017):
