@@ -154,6 +154,7 @@ t/0604_Dialog_Scan.t
 t/0605_Dialog_Scan.t
 t/0606_Dialog_Scan.t
 t/0607_Dialog_Scan.t
+t/0608_Dialog_Scan.t
 t/0610_Dialog_Scan_Image_Sane.t
 t/0611_Dialog_Scan_Image_Sane.t
 t/0612_Dialog_Scan_Image_Sane.t
