@@ -392,8 +392,7 @@ sub set_option {
             my $opt;
             if ($data) {
                 $self->update_options(
-                    Gscan2pdf::Scanner::Options->new_from_data($data),
-                    $option->{name} );
+                    Gscan2pdf::Scanner::Options->new_from_data($data) );
                 $opt = $options->by_name( $option->{name} );
             }
             else {
