@@ -3,6 +3,7 @@
 * Fixed visibility of options for DjVu, JPEG, & TIFF in save dialogue.
 * + Reload recursion limit in Edit/Preferences
   Break of out reload recursion loop if maximum number of reloads is exceeded.
+* Reapply only those current scan settings that were reset by the reload
 
 
 1.8.5 (18.08.2017):
